# evotek-test-repo

./: .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: c03329502862_initial.py
app/: main.py
app/api/v1/: controlers.py
app/core/: config.py
app/domain/models/: models.py
app/domain/schemas/: schemas.py
app/domain/services/: yandex_tts_interactor.py
app/infrastructure/: database.py  repository_interface.py  yandex_tts_adapter.py
app/infrastructure/repositories/: repositories.py
