[tool.poetry]
name = "evotek-test-project"
version = "0.1.0"
description = ""
authors = ["Igor Ruzhilov <iruzhilov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
httpx = "^0.27.2"
yandex-speechkit = "^1.5.0"
grpcio-tools = "^1.66.2"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
